Improved postscript-specific testing.